--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "aos": "^2.3.4",
     "emailjs-com": "^2.6.3",
+    "framer-motion": "^2.9.4",
     "isomorphic-fetch": "^3.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
