--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,9 +1,7 @@
-<IfModule mod_rewrite.c>
+<ifModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /subdirectory
-    RewriteRule ^index\.html$ - [L]
+    RewriteBase /
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-l
-    RewriteRule . /index.html [L]
-</IfModule>
+    RewriteRule (.*) /index.html [QSA,L]
+</ifModule>
