--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.11",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "swiper": "^6.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
