--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.11",
+    "react-toastify": "^6.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0",
     "swiper": "^6.4.1"
