--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sanity/client": "^2.1.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aos": "^2.3.4",
     "emailjs-com": "^2.6.3",
     "framer-motion": "^2.9.4",
+    "git": "^0.1.5",
     "isomorphic-fetch": "^3.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
